hphp/test/slow/hh_namespace_migration/hh_frozenset3.php.expectf
HipHop Fatal error: Class undefined: Test\FrozenSet in %s/slow/hh_namespace_migration/hh_frozenset3.php on line 9
